--- a/index.html
+++ b/index.html
@@ -88,6 +88,67 @@
 
 
 
+<div class="row">
+
+<div class="card" style="width: 18rem;">
+    <img src="j.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title"></h5>
+      <p class="card-text">Look Again Hoodie - Heather Grey
+        CYBER MONDAY STEALS
+    
+    Price: 
+        $14.00
+        $29.99</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="k.webp" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title"></h5>
+      <p class="card-text">Living In It 3 Piece Legging Set - Mocha
+Price:
+        $29.99
+        $59.99
+        50-99% Off EVERYTHING! Prices As Marked</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="l.webp" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title"></h5>
+      <p class="card-text">Fabulosity Stretch Satin Jumpsuit - Mauve
+Price:
+        $24.99
+        $49.99
+        50-99% Off EVERYTHING! Prices As Marked</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="m.webp" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title"></h5>
+      <p class="card-text">Stole Your Boyfriend's Oversized Jogger - Chocolate
+Price:
+        $14.00
+        $29.99</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+
+
+
+</div>
+
+
+
+
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
